--- a/CatDog.ipynb
+++ b/CatDog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,18 +115,25 @@
     "dog_files = []\n",
     "cat_files = []\n",
     "\n",
+    "labels = []\n",
+    "\n",
     "for file_name in file_names:\n",
     "    if file_name.startswith('cat'):\n",
     "        cat_files.append(file_name)\n",
+    "\n",
+    "        labels.append(0)\n",
     "    elif file_name.startswith('dog'):\n",
     "        dog_files.append(file_name)\n",
+    "\n",
+    "        labels.append(1)\n",
+    "        \n",
     "print(len(dog_files))\n",
     "print(len(cat_files))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,6 +145,76 @@
     "    img = img.convert('RGB')\n",
     "\n",
     "    img.save('resized/'+ file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import glob\n",
+    "import numpy as np\n",
+    "\n",
+    "catdogimgs = []\n",
+    "\n",
+    "for file_name in file_names:\n",
+    "    catdogimgs.append(cv2.imread('resized/'+ file_name))\n",
+    "\n",
+    "catdogimgs = np.asarray(catdogimgs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "labels = np.asarray(labels)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(catdogimgs, labels, test_size = 0.2, random_state = 2)\n",
+    "\n",
+    "\n",
+    "X_train_scaled = X_train/255\n",
+    "\n",
+    "X_test_scaled = X_test/255"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "import tensorflow_hub as hub\n",
+    "\n",
+    "mobilenet_model = 'https://tfhub.dev/google/tf2-preview/mobilenet_v2/feature_vector/4'\n",
+    "\n",
+    "pretrained_model = hub.KerasLayer(mobilenet_model, input_shape=(224,224,3), trainable=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.Sequential([\n",
+    "    pretrained_model,\n",
+    "    tf.keras.layers.Dense(2)\n",
+    "])\n",
+    "\n",
+    "model.summary()\n",
+    "\n",
+    "model.compile(\n",
+    "    optimizer = 'adam',\n",
+    "    loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "    metrics = ['acc']\n",
+    ")"
    ]
   }
  ],
